# TrueOrdenador

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  CODEOWNERS  CONTRIBUTING.md  README.md  checklist.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: analisis-kernel-linux.md  referencias-teoricas.md  requirements-system.md
scripts/: check.sh  setup.sh
src/trueordenador/: __init__.py  core.py
tests/: test_core.py
