[tool.poetry]
name = "trueordenador"
version = "0.1.0"
description = "Base del proyecto TrueOrdenador"
authors = ["TrueOrdenador Team <contacto@example.com>"]
readme = "README.md"
packages = [{include = "trueordenador", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
flake8 = "^6.0"
black = "^23.0"
mypy = "^1.0"
bandit = "^1.7"
safety = "^2.3"

[tool.poetry.scripts]
trueordenador = "trueordenador.core:saludar"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
